# specctl

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
dc2k8s/: index.html
docs/: dc2k8s.md  ecs2k8s.md  k8s2ecs.md
ecs2k8s/: index.html
k8s2ecs/: index.html
specctl/: k8s_objects.py  quantity.py  specctl.py  utils.py
specctl/dc2k8s/: README.md  dc_parser.py  dc_reader_writer.py
specctl/ecs2k8s/: README.md  ecs_parser.py  ecs_reader_writer.py  k8s_objects.py
specctl/k8s2ecs/: README.md  ecs_objects.py  ecs_output.py  ingress.py  k8s_parser.py  k8s_reader.py  tf_output.py
terraform/: README.md
terraform/core-infra/: README.md  main.tf  outputs.tf
terraform/ecs-backend-service/: README.md  main.tf  outputs.tf  variables.tf
terraform/ecs-lb-service/: README.md  main.tf  variables.tf
terraform/namespaces/: README.md  main.tf  terraform.tfvars.example  variables.tf
tests/bookinfo/: bookinfo.yaml
tests/docker_compose/nginx/: docker_compose.yml
tests/docker_compose/plane/: docker_compose.yml  env  plane_docker_compose_hub.yml
tests/ecsdemo/: ecsdemo-backend_deployment.yaml  ecsdemo-backend_service.yaml  ecsdemo-frontend_deployment.yaml  ecsdemo-frontend_service.yaml
tests/iam/: job-s3.yaml  my-deployment.yaml  my-sa.yaml  sa-iam-test.yaml
tests/init-container/: deployment.yaml
tests/nginx/: deployment.yaml
tests/retail-store/: catalog-ingress.yaml  deploy.yaml  ui-ingress.yaml
tests/security_group/: my-security-group-policy.yaml  sample-application.yaml
tests/simple/: deployment.yaml
